# sampletrackerKUK

./: .gitignore  EU FORMULAS DATABASE.xlsx  app.py  create_db.py  pyproject.toml  requirements.txt
.cursor/rules/: python-environment.mdc
src/sampletracker/: __init__.py  __main__.py  app.py  dates.py  excel_log.py
src/sampletracker/db/: __init__.py  database.py  models.py
src/sampletracker/ui/: __init__.py  request_form.py
