[project]
name = "sampletracker"
version = "0.1.0"
description = "Sample tracking application"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=3.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
sampletracker = "sampletracker.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
